# vehicle_management_system_cpp

./: Bike.cpp  Bike.h  CMakeLists.txt  Car.cpp  Car.h  Commission.cpp  Commission.h  ErrorVehicles.h  Factory.cpp  Factory.h  MotorVehicle.cpp  MotorVehicle.h  Motorcycle.cpp  Motorcycle.h  README.md  Sprayer.cpp  Sprayer.h  Vehicle.cpp  Vehicle.h  main.cpp  stdin.txt
